--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
-html, body {
+html,
+body {
    margin: 0;
    padding: 0;
    display: grid;
-   
 }
-@media screen and (min-width: 480px) and (max-width: 768px) {
-   .sidebar {
-      min-width: 160px;
+
+@media screen and (min-width: 360px) {
+   .wrap {
+      left: 60%;
    
 
    }
 
    
- }
+}
 
-
-*{
+* {
    box-sizing: border;
 }
 
 .header {
-   
+
    width: 100%;
    height: 80px;
    background-color: rgb(14, 0, 25);
@@ -31,9 +31,10 @@ html, body {
    width: 300px;
    position: relative;
    display: flex;
-   
-   }
-   .searchTerm {
+
+}
+
+.searchTerm {
    width: 100%;
    border: 3px solid rgb(25, 0, 44);
    border-right: none;
@@ -41,11 +42,13 @@ html, body {
    height: 20px;
    border-radius: 5px 0 0 5px;
    outline: none;
-   }
-   .searchTerm:focus{
+}
+
+.searchTerm:focus {
    color: rgb(25, 0, 44);
-   }
-   .searchButton {
+}
+
+.searchButton {
    width: 40px;
    height: 36px;
    border: 1px solid rgb(25, 0, 44);
@@ -55,29 +58,29 @@ html, body {
    border-radius: 0 5px 5px 0;
    cursor: pointer;
    font-size: 20px;
-   }
-   .wrap{
+}
+
+.wrap {
    width: 30%;
    position: absolute;
    top: 40px;
-   left: 55%;
    transform: translate(-50%, -50%);
    padding: 5px;
-   
-   }
 
-   
+}
+
+
 
 .container {
    display: flex;
    min-height: 100vh;
    width: 100%;
-  
-   
+
+
 }
 
 .sidebar {
-   width: 15%;
+   width: 200px;
    background-color: rgb(25, 0, 44);
 
    text-align: center;
@@ -91,29 +94,38 @@ html, body {
    line-height: 1.9;
    color: #e19cff;
    text-transform: uppercase;
-   font-size: 150%;
+   font-size: 20px;
    padding: 7px 13px;
    border-radius: 3px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-
 .main {
    width: 80%;
    background: #1e0039;
    padding: 60px;
-   
+
 }
 
 .main p {
-   
+
    font-size: 30px;
    color: #ffffff;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   text-align: center;
 
 }
-   
+
+.gallery {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+
+}
+
+
+
 
 
 
@@ -125,6 +137,7 @@ html, body {
    display: flex;
    flex-direction: column;
 }
+
 .sidebar_two h2 {
    color: #e19cff;
    text-align: center;
@@ -135,7 +148,7 @@ html, body {
 
 
 .footer {
-   
+
    width: 100%;
    height: 100px;
    background-color: rgb(14, 0, 25);
@@ -144,8 +157,8 @@ html, body {
    color: #eeeeee;
 }
 
-a.active,a:hover {
-   background:rgb(53, 0, 97) ;
+a.active,
+a:hover {
+   background: rgb(53, 0, 97);
    transition: 0.5s;
 }
-
