--- a/style2.css
+++ b/style2.css
@@ -5,14 +5,14 @@ body {
    display: grid;
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
-   .sidebar {
-      min-width: 160px;
-
+@media screen and (min-width: 360px) {
+   .wrap {
+      left: 60%;
+   
 
    }
 
-
+   
 }
 
 * {
@@ -64,7 +64,7 @@ body {
    width: 30%;
    position: absolute;
    top: 40px;
-   left: 55%;
+ 
    transform: translate(-50%, -50%);
    padding: 5px;
 
@@ -81,7 +81,7 @@ body {
 }
 
 .sidebar {
-   width: 15%;
+   width: 200px;
    background-color: rgb(25, 0, 44);
 
    text-align: center;
@@ -95,13 +95,12 @@ body {
    line-height: 1.9;
    color: #e19cff;
    text-transform: uppercase;
-   font-size: 150%;
+   font-size: 20px;
    padding: 7px 13px;
    border-radius: 3px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 
 .main {
    width: 80%;
