--- a/style3.css
+++ b/style3.css
@@ -4,15 +4,16 @@ html, body {
    display: grid;
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
-   .sidebar {
-      min-width: 160px;
+@media screen and (min-width: 360px) {
+   .wrap {
+      left: 60%;
    
 
    }
 
    
- }
+}
+
 
 *{
    box-sizing: border;
@@ -59,7 +60,7 @@ html, body {
    width: 30%;
    position: absolute;
    top: 40px;
-   left: 55%;
+   
    transform: translate(-50%, -50%);
    padding: 5px;
    
@@ -71,12 +72,13 @@ html, body {
    display: flex;
    min-height: 100vh;
    width: 100%;
+   height: 100%;
    
    
 }
 
 .sidebar {
-   width: 15%;
+   width: 200px;
    background-color: rgb(25, 0, 44);
 
    text-align: center;
@@ -90,7 +92,7 @@ html, body {
    line-height: 1.9;
    color: #e19cff;
    text-transform: uppercase;
-   font-size: 150%;
+   font-size: 20px;
    padding: 7px 13px;
    border-radius: 3px;
    text-align: center;
