--- a/style4.css
+++ b/style4.css
@@ -5,15 +5,15 @@ body {
    display: grid;
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
-   .sidebar {
-      min-width: 200px;
+@media screen and (min-width: 360px) {
+   .wrap {
+      left: 60%;
    
 
    }
 
    
- }
+}
 
 * {
    box-sizing: border;
@@ -64,7 +64,7 @@ body {
    width: 30%;
    position: absolute;
    top: 40px;
-   left: 55%;
+ 
    transform: translate(-50%, -50%);
    padding: 5px;
 
@@ -81,7 +81,7 @@ body {
 }
 
 .sidebar {
-   width: 15%;
+   width: 200px;
    background-color: rgb(25, 0, 44);
 
    text-align: center;
@@ -95,7 +95,7 @@ body {
    line-height: 1.9;
    color: #e19cff;
    text-transform: uppercase;
-   font-size: 150%;
+   font-size: 20px;
    padding: 7px 13px;
    border-radius: 3px;
    text-align: center;
